# neo-commerce

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/ai/: README.md  pyproject.toml
apps/ai/neo_ai/: main.py
apps/ai/neo_ai/data/: faqs.csv
apps/ai/neo_ai/models/: schemas.py
apps/ai/neo_ai/routers/: answer.py  embeddings.py  health.py
apps/ai/neo_ai/services/: embedding.py  pipeline.py  retriever.py
apps/ai/neo_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/ai/tests/: test_health.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/prisma/: schema.prisma  seed.ts
apps/web/public/email/: cart-recovery.html
apps/web/src/__tests__/: currency.test.ts  glass-card.test.tsx
apps/web/src/app/: layout.tsx
apps/web/src/app/(store)/: layout.tsx  page.tsx
apps/web/src/app/admin/: layout.tsx
apps/web/src/components/admin/: admin-nav.tsx  admin-topbar.tsx
apps/web/src/components/assistant/: assistant-panel.tsx  assistant-provider.tsx
apps/web/src/components/commerce/: add-to-cart-button.tsx  cart-button.tsx  cart-items-client.tsx  product-card.tsx  product-grid.tsx
apps/web/src/components/layout/: glass-shell.tsx  store-footer.tsx  store-header.tsx
apps/web/src/hooks/: use-session.ts
apps/web/src/lib/: env.ts  stripe.ts
apps/web/src/server/: db.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: commerce.ts  next-auth.d.ts
apps/web/src/utils/: currency.ts
apps/web/tests/e2e/: storefront.spec.ts
(+29 files in other folders)
